add animation in nav img-prof button and card

--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="nav-brand">
+        <div class="nav-brand animate__animated animate__lightSpeedInLeft">
             <img src="assets/img/Mi-Brand.png" alt="logo1" class="logo-brand">
             <h1 class="brand"><a href="#">Muhammad Iqbal</a></h1>
         </div>
         <nav>
-            <ul>
+            <ul class="animate__animated animate__backInDown">
                 <li><a href="#jasa">Jasa</a></li>
                 <li><a href="https://www.instagram.com/dl_muhiqbal23/" target="_blank">Contact</a></li>
             </ul>
         </nav>
-        <a href="https://www.instagram.com/dl_muhiqbal23/" class="btn-follow"  target="_blank">Follow saya</a>
+        <a href="https://www.instagram.com/dl_muhiqbal23/" class="btn-follow animate__animated animate__backInDown"  target="_blank">Follow saya</a>
     </header>
 
     <div class="container">
         <div class="intro">
             <p class="title">Hello, Im Muhammad Iqbal!</p>
             <p class="description">Junior Developer | Designer Logo | Student</p>
-            <img src="assets/img/MiProfile.png" alt="MIProfile.png" class="img-profile">
+            <img src="assets/img/MiProfile2.png" alt="MIProfile.png" class="img-profile animate__animated animate__zoomIn">
         </div>
     </div>
 
@@ -35,11 +36,11 @@
             <p class="title">I'm a Junior Programmer</p>
             <p class="description">Ngoding aja dulu! Jago belakangan!</p>
             <div class="parallax-btn">
-                <a class="btn-follow" href="https://www.instagram.com/dl_muhiqbal23/" target="_blank">Mari Kerjasama</a>
+                <a class="btn-follow animate__animated animate__pulse animate__repeat-3" href="https://www.instagram.com/dl_muhiqbal23/" target="_blank">Mari Kerjasama</a>
             </div>
         </div>
         <div class="container" id="jasa">
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUpBig">
                 <div class="card-item">
                     <img src="assets/icon/24-hours.png" class="icon-card" alt="icon1">
                     <p class="card-title">Pelayanan 24/7</p>
